--- a/TicketTestProjekt/TicketTestProjekt.csproj
+++ b/TicketTestProjekt/TicketTestProjekt.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StoreBaeltTicketLibrary\StoreBaeltTicketLibrary.csproj" />
     <ProjectReference Include="..\TicketClassLibrary\TicketClassLibrary.csproj" />
   </ItemGroup>
 
